ajout de des différentes routes et doc plus conséquente
